--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
-    <%= yield %>
+   
+    <nav>
+      <li> <%= link_to "Primera vista", root_path %> </li>
+      <li> <%= link_to "Segunda vista", '/pages/two' %> </li>
+      <li> <%= link_to "Tercera vista", '/pages/three' %> </li>
+    </nav>
+    
+    <%= yield %> 
+
+  Última parte
   </body>
+
 </html>
